# eps-prescription-tracker-ui

./: .gitallowed  .gitignore  .gitleaksignore  .grype.yaml  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  CERTS.json  Makefile  README  README.md  SECURITY.md  _config.yml  amplify.yml  audit_report.json  cdk.json  eslint.config.mjs  ignored_security_issues.json  ignored_security_issues.md  jest.default.config.ts  package-lock.json  package.json  pyproject.toml  show_deps.sh  sonar-project.properties  tsconfig.build.json  tsconfig.defaults.json  tsconfig.json  vitest.base.config.ts  vitest.config.ts  vitest.shared.config.ts  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
SAMtemplates/: main_template.yaml
_data/: dev-pr_cpt-ui-backend-pr-89_deployments.csv  dev-pr_cpt-ui-backend-pr-89_latest.csv  dev-pr_cpt-ui-pr-89_deployments.csv  dev-pr_cpt-ui-pr-89_latest.csv  dev-pr_deployments.csv  dev-pr_latest.csv  dev_deployments.csv  dev_latest.csv  int_deployments.csv  int_latest.csv  prod_deployments.csv  prod_latest.csv  qa_deployments.csv  qa_latest.csv  recovery_deployments.csv  recovery_latest.csv  ref_deployments.csv  ref_latest.csv
amplify/: backend.ts  tsconfig.json
app/: layout.tsx  page.tsx
docker/: Dockerfile  entrypoint.sh
scripts/: cdk-bootstrap.sh  (+9 more)
(+98 files in other folders)
