
[project]
python = "^3.12"

[tool.poetry]
name = "eps-clinical-prescription-tracker-ui"
version = "0.0.1-alpha"
description = "EPS Clinical Prescription Tracker UI"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-clinical-prescription-tracker-ui"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
cfn-lint = "^1.15.2"
pip-licenses = "^5.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
