
[project]
python = "^3.14"
name = "eps-clinical-prescription-tracker-ui"

[tool.poetry]
name = "eps-clinical-prescription-tracker-ui"
version = "0.0.1-alpha"
description = "EPS Clinical Prescription Tracker UI"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-clinical-prescription-tracker-ui"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pytest = "^9.0.2"
requests = "^2.32.3"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pip-licenses = "^5.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
